--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  qflite:
+  sqflite:
   path:
 
 # For information on the generic Dart part of this file, see the
